Removed usage of deprecated list constructors.

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Jan 16 16:42:30 GMT+01:00 2021
-sdk.dir=C\:\\Users\\Johannes\\AppData\\Local\\Android\\Sdk
+sdk.dir=/home/johannes/Android/Sdk
