--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -45,7 +45,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - data/LevelData.json
+    - data/levelData.json
     - data/lang/
 
   # To add assets to your application, add an assets section, like this:
